--- a/index.html
+++ b/index.html
@@ -106,6 +106,27 @@
         </div>
       </div>
     </section>
+
+    <!--Footer section start-->
+    <section class="footer_wrapper mt-3 mb-md-0">
+      <div class="container px-5 px-lg-0">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Nimboo</h5>
+            <p class="mb-4 ps-0 company_details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus nemo expedita beatae velit dignissimos quisquam recusandae reprehenderit delectus, corporis quam autem error itaque sit aspernatur dicta repellat dolorum tempore suscipit.</p>
+            <div class="contact-info">
+              <ul class="list-unstyled">
+                <li><a href="#"><i class="fa fa-home me-3"></i>No. 96, South city, london</a></li>
+                <li><a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
+                <li><a href="#"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer section exit-->
     <script href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
