--- a/index.html
+++ b/index.html
@@ -125,8 +125,57 @@
         </div>
       </div>
     </section>
-
     <!-- Footer section exit-->
+
+    <!--Footer section start-->
+    <section class="footer_wrapper mt-3 mb-md-0">
+      <div class="container px-5 px-lg-0">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Customer support</h5>
+            <ul class="link-widget p-0">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+              <li><a href="#">Product Returns</a></li>
+              <li><a href="#">Wholesale Policy</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Quick Links</h5>
+            <ul class="link-widget p-0">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+              <li><a href="#">Product Returns</a></li>
+              <li><a href="#">Wholesale Policy</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Newsletter</h5>
+            <div class="form-group mb-4">
+              <input type="email" class="form-control bg-transparent" placeholder="Enter Your Email Here">
+              <button type="submit" class="btn main-btn">Subscribe</button>
+            </div>
+            <h5>Stay Connected</h5>
+            <ul class="social-network d-flex align-items-center p-0">
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+      <div class="container-fluid copyright-section">
+        <p>Copyright <a href="#">© CODE4EDUCATION.</a> ALL Rights Reserved</p>
+      </div>
+    </section>
+     <!-- Footer section exit-->
+
+
     <script href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
