Changes in product name

--- a/Poducts/product_page1.html
+++ b/Poducts/product_page1.html
@@ -45,7 +45,7 @@
             <!-- Product Images -->
             <div class="product-images">
                 <div class="main-image">
-                    <img id="main-product-image" src="https://via.placeholder.com/600x600?text=Adjustable+Dumbbells" alt="Premium Adjustable Dumbbells">
+                    <img id="main-product-image" src="/Images_Praducts/product-1.jpg" alt="Premium Adjustable Dumbbells">
                 </div>
                 <div class="thumbnail-container">
                     <div class="thumbnail active" data-image="https://via.placeholder.com/600x600?text=Adjustable+Dumbbells">
