--- a/product.html
+++ b/product.html
@@ -97,7 +97,7 @@
                     <a href="/Poducts/product_page1.html" target="_blank"><img src="/Images_Praducts/product-1.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low Quai 54</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,700</div>
                 </div>
             </div>        
@@ -107,7 +107,7 @@
                     <a href="/Poducts/product_page2.html" target="_blank"><img src="/Images_Praducts/product-2.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -117,7 +117,8 @@
                     <a href="/Poducts/product_page3.html" target="_blank"><img src="/Images_Praducts/product-3.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem, ipsum dolor.
+                    </h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -127,7 +128,7 @@
                     <a href="/Poducts/product_page4.html" target="_blank"><img src="/Images_Praducts/product-4.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -137,7 +138,7 @@
                     <a href="/Poducts/product_page5.html" target="_blank"><img src="/Images_Praducts/product-5.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -147,7 +148,7 @@
                     <a href="/Poducts/product_page6.html" target="_blank"><img src="/Images_Praducts/product-6.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -157,7 +158,7 @@
                     <a href="/Poducts/product_page7.html" target="_blank"><img src="/Images_Praducts/product-7.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -167,7 +168,7 @@
                     <a href="/Poducts/product_page8.html" target="_blank"><img src="/Images_Praducts/product-8.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -177,7 +178,7 @@
                     <a href="/Poducts/product_page9.html" target="_blank"><img src="/Images_Praducts/product-9.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem, ipsum dolor.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -187,7 +188,7 @@
                     <a href="/Poducts/product_page10.html" target="_blank"><img src="product-10.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -197,7 +198,7 @@
                     <a href="/Poducts/product_page11.html" target="_blank"><img src="product-11.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
@@ -207,7 +208,7 @@
                     <a href="/Poducts/product_page12.html" target="_blank"><img src="product-12.jpg" alt=""></a>
                 </div>
                 <div class="content">
-                    <h3>Air Jordan 1 Low OG 'Oxidised Green'</h3>
+                    <h3>Lorem ipsum dolor sit.</h3>
                     <div class="price"><i class='bx bx-rupee' style='color:#0b0a0a' ></i>12,795</div>
                 </div>         
             </div>
