product page 3 added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <img src="..." class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere expedita ad maiores corrupti ullam fugiat pariatur accusamus animi possimus impedit?</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -79,6 +79,27 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="feature_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-lg-3 mb-5">
+            <div class="card feature-box">
+              <div class="text-center">
+                <div class="features-icon-border">
+                  <div class="features-icon">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <div class="features-text">
+                  <h3>24/07 Support</h3>
+                </div>
               </div>
             </div>
           </div>
